# ChangeLog for media-libs/libmediainfo
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/libmediainfo/ChangeLog,v 1.77 2014/06/16 05:34:33 radhermit Exp $

*libmediainfo-0.7.69 (16 Jun 2014)

  16 Jun 2014; Tim Harder <radhermit@gentoo.org> +libmediainfo-0.7.69.ebuild:
  Version bump.

*libmediainfo-0.7.68 (21 Apr 2014)

  21 Apr 2014; Tim Harder <radhermit@gentoo.org> +libmediainfo-0.7.68.ebuild:
  Version bump.

  29 Mar 2014; Tim Harder <radhermit@gentoo.org> libmediainfo-0.7.67.ebuild:
  Add slot rebuild for tinyxml2.

*libmediainfo-0.7.67 (03 Mar 2014)

  03 Mar 2014; Tim Harder <radhermit@gentoo.org> +libmediainfo-0.7.67.ebuild:
  Version bump.

  26 Jan 2014; Agostino Sarubbo <ago@gentoo.org> libmediainfo-0.7.65.ebuild:
  Stable for x86, wrt bug #495734

  19 Jan 2014; Pacho Ramos <pacho@gentoo.org> libmediainfo-0.7.65.ebuild:
  amd64 stable, bug 495734

  23 Nov 2013; Tim Harder <radhermit@gentoo.org> -libmediainfo-0.7.61.ebuild,
  -libmediainfo-0.7.62.ebuild, -libmediainfo-0.7.63.ebuild:
  Remove old.

*libmediainfo-0.7.65 (23 Nov 2013)

  23 Nov 2013; Tim Harder <radhermit@gentoo.org> +libmediainfo-0.7.65.ebuild:
  Version bump.

  14 Sep 2013; Agostino Sarubbo <ago@gentoo.org> libmediainfo-0.7.64.ebuild:
  Stable for x86, wrt bug #482624

  31 Aug 2013; Agostino Sarubbo <ago@gentoo.org> libmediainfo-0.7.64.ebuild:
  Stable for amd64, wrt bug #482624

*libmediainfo-0.7.64 (07 Jul 2013)

  07 Jul 2013; Tim Harder <radhermit@gentoo.org> +libmediainfo-0.7.64.ebuild:
  Version bump, update HOMEPAGE.

  01 Jun 2013; Tim Harder <radhermit@gentoo.org> libmediainfo-0.7.63.ebuild:
  Update license to BSD-2.

*libmediainfo-0.7.63 (01 Jun 2013)

  01 Jun 2013; Tim Harder <radhermit@gentoo.org> +libmediainfo-0.7.63.ebuild,
  +files/libmediainfo-0.7.63-pkgconfig.patch:
  Version bump.

  10 Apr 2013; Vicente Olivert Riera <vincent@gentoo.org>
  libmediainfo-0.7.62.ebuild: