@@ -7,21 +7,23 @@ DIST libmediainfo_0.7.65.tar.bz2 1030927 SHA256 afda2ab23ff25278c502f6ab2a4adcad
 DIST libmediainfo_0.7.67.tar.bz2 1051454 SHA256 d5204f5bcb1fb07954ecc59eb639e85975bc3fcc83b77fb47689a558a1e24a74 SHA512 f2842298ac8c64c7e23f4f127d04a4543b16cc0f07c9ac376152f9d3440373cde0ede3ac5c537aa4fe0d34d38ed283d10a726454a8fb0847f80944b1b2cfb426 WHIRLPOOL 9c5fc8f968d4a3492f8baa51071e952e2c7f620cab31ed5d15acf2f7c8b246cb1a559b1f6503730e394af282c9b0dcdd59cc43d61ca53a09df31eef32870cc2c
 DIST libmediainfo_0.7.68.tar.bz2 1552520 SHA256 2e4b0b8682aa754d97354aa4a666b1ae402967bf212c66f0c191889f5efcd5a7 SHA512 3e5d2aa187ce42f36c1e26d6c984c8ad9c65f0a4698f36c894246690772236ce6c586a32ee386ac77c3bdbef1301650f92ccd21f09c759ef1f99ceaa7d542c86 WHIRLPOOL fb31340e8080a92f00a52e53d7b4a5cab7a20d62f25538a16ce355ef247e19c7850d012779831c8abd1c83d02096bbe7bb1d21c176f0fef877bcf7b3b3132a60
 DIST libmediainfo_0.7.69.tar.bz2 1561026 SHA256 31d320a52ac52b73e9d63a61ef58d4887cec3d0d935d802957306f7c3ec09d04 SHA512 422a3bad4513df1bfdbfbf27fe39fe75af245b98379b820b743452e9b16025b6aa798b93a71f1647b2679d4b73f38997072dfb449e44b9b4510588793d3bf2a3 WHIRLPOOL 1059b1455eca838f5a45c2d170675f511ae7e3989e27125521d22fdbfd879bc079ee735f86ec9f0caf77e13f7fdc82fc4632c42651b9ab0efbb5478afd601d26
+DIST libmediainfo_0.7.70.tar.bz2 1612851 SHA256 fcc694aea336392ce0c4a11da700c641357561f25d83f17b8d8224e2474405c5 SHA512 e5d9cb9a4b25eadd68b407b6f2809d1b335341d9281e75eab3fa80a7887d3c0240ef631971ef42e6d59c9248b62285ee46b921345ea409b5f42600061fb7ce47 WHIRLPOOL 7e444f3a5c59e48df5f98a1eb7a5ba13690b1e7d5211fc0bbcf804abd2843b59ec3651940a7259d3d339e15cbd79b2525bdf11b2fbbf4420d881364c126d07cc
 EBUILD libmediainfo-0.7.64.ebuild 1808 SHA256 8ae1e630dc281a4e1b2d95852275f06791a73e6852f8e2cb7e7f73fa84c91097 SHA512 c4095017437d13ec84cdeb300c5057877cfcc64a0f962087787b7cf2926d0bd3c6327d207444df82290aa1bedfd8301be0d58b055f92cbb2797d04259b9ee96c WHIRLPOOL f7c5010b2c768a65fdce3358d6c46827e9d1428c5ea3fe00313b2a7948a6c5c399763594918938bdbfd4d25bbab5f11d14f463f725158e852f3aee24b5e89edf
 EBUILD libmediainfo-0.7.65.ebuild 1808 SHA256 45e01fda12db7e418e1db33054f1d2cddc69ae209668dcd909620ca0cbe25a70 SHA512 58c77744e5d4d888517876cc90596852ae46d3739dc12f47c59cbd0eeef99e79281b97ce719e1d21e1687070e5c5b6cc89d37f36b9352491e70f54182d848654 WHIRLPOOL 965f06fb1c53b61200b0f73df9b08d7be3b447252179edd4c7772717303007be56389c6de91147c1df381113c93390202e6ab4b384d744bb5655a01e6ea7de5f
 EBUILD libmediainfo-0.7.67.ebuild 1818 SHA256 27e55ff9577541778f479afcd12e8c1e8878ca6ead030db08eefd188fe3b9862 SHA512 81aeef8f1a994b0ab3d2cb4c3f4aa54928d86b5fba5eaa4b99da72179a6201d4a9c2fd6df671eb095ddef11ad2e60fd84382f58a2532f23f2edd339f1e3c37b4 WHIRLPOOL 7075fe4abaeb248011ba7ba791003ec7a480f7e30771f09b242566927a7017e5e3d40491dbc2ece5c600a9a0473b0e131e15becd92afc30d8abe7842c5381c67
 EBUILD libmediainfo-0.7.68.ebuild 1818 SHA256 bfd7fe5b9a77b9d81b689dd53764afa8357e528178fbb9aa861491db24e30cca SHA512 d555ff67a81e39a3aefb8a4a546b48eca89677c50cdc51c8fe4bb5e950d5efce060a8f3d80b322bef03f274a5176ae649a22ae9deb91731a7dea1b6a435097e4 WHIRLPOOL 250b7b2d3e279899eac9583dbac9ceb09f9f803ffaff1ee062984f3fa349e107b4f6d23e54d90eb0fd2a94b6059ddb8cfa67a07ea3d5fc49af2cf9dae7c3f725
 EBUILD libmediainfo-0.7.69.ebuild 1818 SHA256 0cdd7730c6caaf2f136c097b35255e8c13f9330da83a01c8098df5bfcf37d8d8 SHA512 0996eb4495a2b0efc18fc499353fcfd0e4d4f36426d06174c81f0bcbbeb71a68a373243869445aa60828e739fa04bbc1af1970aa50a3e5b73375101cbcc82a8d WHIRLPOOL ce4ae0bc9a49e9f0ae145abcdf90a198c5ce13c7d3fcae4afb8172aebf8c6af58908ec5b2b50a65ff15e22ef13747433f46847191a5a78e6c4f906d2a24c6bd0
-MISC ChangeLog 11529 SHA256 d64090a904b88ed32d1fdad2263031b39c90fbcf5b761afa765b47af26da07e6 SHA512 4544cab845d419f4e454a5787cf1be8b2dcbc000aea35c62af6a2280394a7371c2e14a4adc6768c4843789ac41a11282866ce9116b63bb394150829fd07c0f42 WHIRLPOOL c1179881a93546b8760e149888f3997b567ade6b3a92ed7ef3f01331bab3ffadc72cc00b367106533aedea0745da3c13440bb277e8622b4e49d9bb82466b091e
+EBUILD libmediainfo-0.7.70.ebuild 1818 SHA256 bd40e9b88794dec592e6985b31d61f89e28d4c7619e548202bdc66ddd859e008 SHA512 88984fe547a148d3e8e80bfd54ab35672addee6cbdece9a978c6b1d6e174003b37fa803a6c8fbea75b1b7c404a4070de2105f7150261ac62fe96172203bc3dab WHIRLPOOL 86669b64e83aa20006fad3da5c0f3a572f30ee6281cf29678fe1e8224da0183314314c9a08ee9b6011cd904331308642b857cee09545a1536bcb3cf7e1873c41
+MISC ChangeLog 11660 SHA256 0ecb9f0f2c72bc57d6c75ebba467aa0cd98255cbde6800ca63bce57613934a29 SHA512 66bcacb4260a1c231d1b2b38d545206da8786b08620e70b956c0dc6d6dc4eab138348d98c81863cdeb2cece738e5632e1f0667d90220ae836d4854a80ff88c45 WHIRLPOOL 9f58cdbce78f6bc1949921e2675e8597c3d96024b62708c77f8fbb47d58d24a2ca510047ec4ee273ff4ec0cd5fb43dff67f37bd598b0b9298a7dfe1051b26344
 MISC metadata.xml 331 SHA256 54f4d74833ab49b18764a7a6aec5b67bc780a4fab27c8f4c2d5ea034763407a9 SHA512 96f0b1a9c2720cf596c15761dfa1d133a05641fa2339d5e4e30e535030984167c8bd95afc0c1b2a63104579e3a20b0f97c1538df664e97e0e7bf76c5d0b38725 WHIRLPOOL 642d12f49513aef911a05d8d9c50c0a5284214e8555b10b23f47c1c68205da0635f8ebdcc16f3108fb61001012f285afcf7930e1f0c1181806c9fb33f47625f1
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQEcBAEBCAAGBQJTnoHqAAoJEEqz6FtPBkyjj98H/RHZZl5wDXnMgtNPWn4HBY3A
-QoO+AhZfFTpqGmKPo9ePZNYljQp5t8tx3pDm9NdxzCtVDL2DafCPT751qTfllCmT
-d2qrkxeujfM1ZiuMGxKeeEIrhePC+PD7f8kSTVysdxGQdHGBM65s9Umghqorbadh
-VMTEB5pYml5WRLmKVgQILRWd7jURO0whaK72O+49Hnr4iSqRMA1m2x+c+JGUwOAg
-Ljc+7WpLwRE6zn9P5Ej02BT4/VaGyuQbqaeH/EnRg7PU2lP9mDJB/+wvNRsrVxZv
-B+ECT1/oXpbgS7pyzSuDr8j14ClZE3ui05QJcc80bVSy/eMXrsniQbGrQoin66Y=
-=Qon9
+iQEcBAEBCAAGBQJUCHoYAAoJEEqz6FtPBkyjP5cH/jJuQ88ZdQaeOQSAbAAnD6Bx
+YRgsNLJ6uLCnE2FJQEMTGHKq7UI3YRUi2a31Oz+jvGeq0B/uHvtiWbkZiSU6GadG
+jj6BOWyvV8H/lotY6QnsrKTg4qWQZosV8np+DUoihzfBX9GgDVeurBnY33iF1Sau
+HkxMW42jksShnXUNApWWesAkgpuL1xoKLz7Ca/x+bywVLIOU7qrGiVbQ0/W25Lgp
+MPjtuHSddbK77Napm32IIHYrV9wx+Z5Xfa113HGT3sGBvIZ1iXegoKhzCWpI12+3
+FuTzZqiSjQYbwJ/0sEgASYOpLKnXO7gAeqPIGZkQ0TaKZleY+5blp96qpd0JBa0=
+=CHfD
 -----END PGP SIGNATURE-----
